# DECT

./: CMakeLists.txt  main.cpp
Analysis/: FDistributionSolver.h  SFDistributionSolver.h
FeatureMethod/: DetectMethod.h  FinesseFeature.h  FinesseSkip.h  NFeature.h  NFeatureSample.h  NFeatureSkip.h
MetadataManager/: BloomFilter.h  ChunkCache.h  HarContainerManager.h  MetadataManager.h
Pipeline/: ChunkingPipeline.h  DeduplicationPipeline.h  HashingPipeline.h  ReadFilePipeline.h  RestorePipleline.h  WriteFilePipeline.h
Test/: CacheTest.cpp  distriTest.cpp  snrtest.cpp  stackTest.cpp
Utility/: ChunkFileManager.h  FileOperator.h  StorageTask.h
xdelta/: xdelta3.cpp  xdelta3.h
